fixed the hero cards so the images are not overlapped by the header

--- a/src/components/heroCard.scss
+++ b/src/components/heroCard.scss
@@ -3,28 +3,29 @@
 @import "../styles/variables.scss";
 
 .hero {
-  height: calc(100vh - #{$header + $footer});
-  @include flex(row, center, center);
-  max-width: 100rem;
-  margin: 0 auto;
-  margin-bottom: 2rem;
-  & > div:nth-child(2) {
-    @include flex(column, center, center);
-    position: absolute;
-    width: 50vw;
-    @include breakpoint(300px) {
-      position: relative;
-    }
-  }
-  &__picture {
-    height: calc(100vh - #{$header + $footer});
-    position: absolute;
-    object-fit: contain;
-    @include breakpoint(300px) {
-      right: 0vw;
-      @include breakpoint(500px) {
-        right: auto;
-      }
-    }
-  }
+	height: calc(100vh - #{$footer});
+	@include flex(row, center, center);
+	max-width: 100rem;
+	margin: 0 auto;
+	margin-bottom: 2rem;
+	padding-top: $header;
+	& > div:nth-child(2) {
+		@include flex(column, center, center);
+		position: absolute;
+		width: 50vw;
+		@include breakpoint(300px) {
+			position: relative;
+		}
+	}
+	&__picture {
+		height: calc(100vh - #{$header + $footer});
+		position: absolute;
+		object-fit: contain;
+		@include breakpoint(300px) {
+			right: 0vw;
+			@include breakpoint(500px) {
+				right: auto;
+			}
+		}
+	}
 }
